Fix error alert not showing in login form

--- a/resources/sass/auth.scss
+++ b/resources/sass/auth.scss
@@ -14,7 +14,6 @@ body {
   background: #f5f5f5;
   display: grid;
   height: 100vh;
-  justify-content: center;
   margin: 0;
   place-items: center center;
 }
